Connecting housing type, bathrooms, transportation and commute

--- a/Odin/Views/Orders/Partials/_Housing.cshtml
+++ b/Odin/Views/Orders/Partials/_Housing.cshtml
@@ -24,20 +24,20 @@
             </div>
             <div class="col-md-6">
                 <div>
-                    <p>@Html.DisplayNameFor(model => model.HousingTypeString)</p>
-                    <span>@Html.DisplayFor(model => model.HousingTypeString)</span>
+                    <p>@Html.DisplayNameFor(model => model.HousingTypeName)</p>
+                    <span>@Html.DisplayFor(model => model.HousingTypeName)</span>
                 </div>
                 <div>
-                    <p>@Html.DisplayNameFor(model => model.NumberOfBathroomsString)</p>
-                    <span>@Html.DisplayFor(model => model.NumberOfBathroomsString)</span>
+                    <p>@Html.DisplayNameFor(model => model.NumberOfBathroomsName)</p>
+                    <span>@Html.DisplayFor(model => model.NumberOfBathroomsName)</span>
                 </div>
                 <div>
-                    <p>Distance from Work:</p>
-                    <span>10 miles or less</span>
+                    <p>@Html.DisplayNameFor(model => model.MaxCommute)</p>
+                    <span>@Html.DisplayFor(model => model.MaxCommute)</span>
                 </div>
                 <div>
-                    <p>Spouse and Kids:</p>
-                    <span>Yes, 2</span>
+                    <p>@Html.DisplayNameFor(model => model.SpouseAndKids)</p>
+                    <span>@Html.DisplayFor(model => model.SpouseAndKids)</span>
                 </div>
             </div>
         </div>
