--- a/Odin/Content/css/transferee/housing.scss
+++ b/Odin/Content/css/transferee/housing.scss
@@ -1,7 +1,11 @@
 ﻿@import "../shared/_definitions.scss";
 
+.mapWrapper {
 
-#properties {
+    img {
+        display: block;
+        width: 100%;
+    }
 }
 
 #propertiesFilterAdd {
@@ -23,14 +27,73 @@
     }
 }
 
-button#addProperty {
-}
-
-
-
 #propertiesHeader {
     p {
         color: $DW_Blue;
         white-space: pre-line;
     }
 }
+/*#housing 
+    padding-top: 10px;
+    padding-left: 50px;
+
+    p#caption {
+        padding-bottom: 0px;
+        margin-bottom: 0px;
+        font-size: 25px;
+        color: #231F20;
+    }
+
+    div.row {
+        text-align: left;
+    }
+
+    .row {
+
+       label {
+                display: block;
+                font-size: 16px;
+                font-weight: 200;
+                color: #858585;
+            }
+
+            span {
+                color: #35A2DB;
+                font-size: 16px;
+            }
+        }
+
+        #properties {
+        }
+
+        #propertiesFilterAdd {
+
+            .filterNewLikeDislike {
+                input {
+
+                    &:checked:before {
+                        background-color: $DW_Purple;
+                    }
+
+                    &:checked:after {
+                        border: none;
+                    }
+
+                    &:after {
+                    }
+                }
+            }
+        }
+
+        button#addProperty {
+        }
+
+
+
+        #propertiesHeader {
+            p {
+                color: $DW_Blue;
+                white-space: pre-line;
+            }
+        }
+     }*/
