--- a/Odin/Content/css/transferee/transferee.css
+++ b/Odin/Content/css/transferee/transferee.css
@@ -6,10 +6,10 @@
 nav#transfereeSideNav {
   background-color: #a7ce39;
   position: fixed;
-  top: 8rem;
+  top: 5rem;
   left: 0;
   width: 15rem;
-  height: calc(100vh - 8rem);
+  height: calc(100vh - 5rem);
   color: white; }
   nav#transfereeSideNav .transfereeSideNav__person {
     text-align: center;
@@ -43,4 +43,61 @@ nav#transfereeSideNav {
         background-color: rgba(0, 0, 0, 0.2); }
     nav#transfereeSideNav ul.transfereeSideNav__items li.selected {
       background-color: #8E1A55; }
+  @media screen and (min-width: 48rem) {
+    nav#transfereeSideNav {
+      height: calc(100vh - 8rem);
+      top: 8rem; } }
+
+.sectionTitle {
+  padding-bottom: 0px;
+  margin: 2rem 0 0 0;
+  font-size: 2.5rem;
+  color: #231F20; }
+
+.sectionSubHead {
+  margin: 2.5rem 0 0.5rem 0;
+  font-size: 1.725rem;
+  font-weight: 500;
+  color: #8e1a55; }
+
+.sectionSave {
+  font-size: small;
+  color: #a7ce39;
+  cursor: pointer; }
+
+.sectionInstruction {
+  color: #35A2DB;
+  font-size: 16px; }
+
+.sectionList {
+  list-style: none;
+  line-height: 1.875rem;
+  margin: 2rem 0 0 0;
+  padding: 0; }
+  .sectionList li {
+    margin: 0 0 1rem 0;
+    padding: 0; }
+    .sectionList li label {
+      display: block;
+      font-size: 1.5rem;
+      font-weight: 500;
+      color: #858585;
+      padding: 0;
+      margin: 0; }
+    .sectionList li p {
+      color: #35A2DB;
+      font-size: 1.5rem;
+      font-weight: 400;
+      margin: 0;
+      padding: 0 1.25rem 0 0;
+      overflow-wrap: break-word;
+      word-wrap: break-word;
+      -ms-word-break: break-all;
+      word-break: break-all;
+      word-break: break-word; }
+    .sectionList li .input-group > input {
+      color: #35A2DB;
+      font-size: 1.5rem;
+      font-weight: 400;
+      margin: 0; }
 
