--- a/Odin/Content/css/transferee/transferee.scss
+++ b/Odin/Content/css/transferee/transferee.scss
@@ -12,10 +12,10 @@ $sideNavWidth: 15rem; //height of primary nav divided by base font size
 nav#transfereeSideNav {
     background-color: $DW_Lime;
     position: fixed;
-    top: $primaryNavHeightLg;
+    top: $primaryNavHeightSm;
     left: 0;
     width: $sideNavWidth;
-    height: calc(100vh - #{$primaryNavHeightLg});
+    height: calc(100vh - #{$primaryNavHeightSm});
     color: white;
 
     .transfereeSideNav__person {
@@ -37,7 +37,7 @@ nav#transfereeSideNav {
         }
     }
 
-    hr.transfereeSideNav__rule{
+    hr.transfereeSideNav__rule {
         border: 0px;
         border-top: 1px solid white;
         width: 85%;
@@ -73,5 +73,78 @@ nav#transfereeSideNav {
     }
 
     .transfereeSideNav__sub-items {
+    }
+
+    @media screen and (min-width: 48rem) {
+        height: calc(100vh - #{$primaryNavHeightLg});
+        top: $primaryNavHeightLg;
+    }
+}
+
+
+.sectionTitle {
+    padding-bottom: 0px;
+    margin: 2rem 0 0 0;
+    font-size: 2.5rem;
+    color: #231F20;
+}
+
+.sectionSubHead {
+    margin: 2.5rem 0 0.5rem 0;
+    font-size: 1.725rem;
+    font-weight: 500;
+    color: #8e1a55;
+}
+
+.sectionSave {
+    font-size: small;
+    color: $DW_Lime;
+    cursor: pointer;
+}
+
+.sectionInstruction {
+    color: #35A2DB;
+    font-size: 16px;
+}
+
+.sectionList {
+    list-style: none;
+    line-height: 1.875rem;
+    margin: 2rem 0 0 0;
+    padding: 0;
+
+    li {
+        margin: 0 0 1rem 0;
+        padding: 0;
+
+
+        label {
+            display: block;
+            font-size: 1.5rem;
+            font-weight: 500;
+            color: #858585;
+            padding: 0;
+            margin: 0;
+        }
+
+        p {
+            color: #35A2DB;
+            font-size: 1.5rem;
+            font-weight: 400;
+            margin: 0;
+            padding: 0 1.25rem 0 0;
+            overflow-wrap: break-word;
+            word-wrap: break-word;
+            -ms-word-break: break-all;
+            word-break: break-all;
+            word-break: break-word;
+        }
+
+        .input-group > input {
+            color: #35A2DB;
+            font-size: 1.5rem;
+            font-weight: 400;
+            margin: 0;
+        }
     }
 }
