Adding null/zero state for pets

--- a/Odin/Views/Orders/Partials/_Housing.cshtml
+++ b/Odin/Views/Orders/Partials/_Housing.cshtml
@@ -14,8 +14,8 @@
                     <span>@Html.DisplayFor(model => model.NumberOfBedrooms)</span>
                 </div>
                 <div>
-                    <p>Pets:</p>
-                    <span>1 Dog, 1 Cat</span>
+                    <p>@Html.DisplayNameFor(model => model.PetsCount)</p>
+                    <span>@Html.DisplayFor(model => model.PetsCount)</span>
                 </div>
                 <div>
                     <p>Transportation:</p>
