Connecting transportation type

--- a/Odin/Views/Orders/Partials/_Housing.cshtml
+++ b/Odin/Views/Orders/Partials/_Housing.cshtml
@@ -18,8 +18,8 @@
                     <span>@Html.DisplayFor(model => model.PetsCount)</span>
                 </div>
                 <div>
-                    <p>Transportation:</p>
-                    <span>Bus</span>
+                    <p>@Html.DisplayNameFor(model => model.TransportationTypeName)</p>
+                    <span>@Html.DisplayFor(model => model.TransportationTypeName)</span>
                 </div>
             </div>
             <div class="col-md-6">
