--- a/Odin/Views/Orders/Index.cshtml
+++ b/Odin/Views/Orders/Index.cshtml
@@ -147,11 +147,8 @@
     </div>
 </div>
 
-@section styles
-{
-    @Styles.Render("~/Styling/orders")
-}
-
+@Styles.Render("~/Styling/orders")
+@Scripts.Render("~/Scripts/orders")
 
 @section scripts
 {
