--- a/Odin/Views/Orders/Partials/_Details.cshtml
+++ b/Odin/Views/Orders/Partials/_Details.cshtml
@@ -1,152 +1,176 @@
 ﻿@model Odin.ViewModels.Orders.Transferee.OrdersTransfereeViewModel
 
-<div class="container-fluid" id="details" data-order-id="@Model.Id">
-    <h1 class="sectionTitle">Profile Summary</h1>
-    <h2 class="sectionSubHead">Important Dates</h2>
-    <ul class="row sectionList">
-        <li class="col-sm-2">
-            <label>Familiarization Trip</label>
-            <p>@Model.PreTripDateDisplay</p>
-        </li>
-        <li class="col-sm-2">
-            <label>Work Start Date:</label>
-            <p>@Model.WorkStartDateDisplay</p>
-        </li>
-        <li class="col-sm-2">
-            <label>Temp Housing:</label>
-            <p>@Model.TempHousingDays</p>
-        </li>
+<div id="details" data-order-id="@Model.Id">
+    <div class="row details-title">
+        <p>Profile Summary</p>
+        <span class="details-blue">Please fill out any items that are not already auto-generated that could aid in the help of your clients placement.</span>
+    </div>
+    <hr />
+    <div class="details-block">
+        <div class="row details-header">
+            <P>
+                File Details:
+            </P>
+        </div>
+        <div class="row details-row">
+            <div class="col-sm-3 details-col">
+                <label>Manager:</label>
+                <span>@Model.ProgramManager.FullName</span>
+            </div>
+            <div class="col-sm-3 details-col">
+                <label>Manager Email:</label>
+                <span>@Model.ProgramManager.Email</span>
+            </div>
+            <div class="col-sm-3 details-col">
+                <label>Manager #:</label>
+                <span> @String.Format("{0:###'.'###'.'####}", double.Parse(@Model.ProgramManager.PhoneNumber))</span>
+            </div>
+            <div class="col-sm-3 details-col">
+                <label>SE Number:</label>
+                <span>@Model.ProgramManager.SeContactUid</span>
+            </div>
+            <div class="col-sm-3 details-col">
+                <label>Client Number:</label>
+                <span>@(Model.ClientFileNumber != null ? Model.ClientFileNumber.ToString() : "TBD")</span>
+            </div>
+        </div>
+    </div>
 
-        <li class="col-sm-2">
-            <label>Final Arrival:</label>
-            <p>@Model.FinalArrivalDateDisplay</p>
-        </li>
-        <li class="col-sm-2">
-            <label>Home Finding Date:</label>
-            <p>@Model.HomeFindingDateDisplay</p>
-        </li>
-        <li class="col-sm-2">
-            <label>Temp Housing Last Day:</label>
-            <p>@Model.TempHousingEndDateDisplay</p>
-        </li>
-    </ul>
+    <div class="details-block">
+        <div class="row details-header">
+            <P>
+                Important Dates:
+            </P>
+        </div>
+        <div class="row details-row">
+            <div class="col-sm-3 details-col">
+                <label>Familiarization Trip:</label>
+                <span>@(Model.PreTripDate.HasValue ? Model.PreTripDate.Value.ToString("MM/dd/yy") : "TBD")</span>
+            </div>
+            <div class="col-sm-3 details-col">
+                <label>Work Start Date:</label>
+                <span>@(Model.WorkStartDate.HasValue ? Model.WorkStartDate.Value.ToString("MM/dd/yy") : "TBD")</span>
+            </div>
+            <div class="col-sm-3 details-col">
+                <label>Temp Housing:</label>
+                <span>@Model.TempHousingDays</span>
+            </div>
+
+            <div class="col-sm-3 details-col">
+                <label>Final Arrival:</label>
+                <span>@(Model.FinalArrivalDate.HasValue ? Model.FinalArrivalDate.Value.ToString("MM/dd/yy") : "TBD")</span>
+            </div>
+            <div class="col-sm-3 details-col">
+                <label>Home Finding Date:</label>
+                <span>@(Model.HomeFindingDate.HasValue ? Model.HomeFindingDate.Value.ToString("MM/dd/yy") : "TBD")</span>
+            </div>
+            <div class="col-sm-3 details-col">
+                <label>Temp Housing Last Day:</label>
+                <span>@(Model.TempHousingEndDate.HasValue ? Model.TempHousingEndDate.Value.ToString("MM/dd/yy") : "TBD")</span>
+            </div>
+        </div>
+    </div>
     @if (@Model.HomeFinding != null)
     {
-        <h2 class="sectionSubHead">Housing Details</h2>
-        <ul class="row sectionList">
-            <li class="col-sm-2">
-                <label>Monthly Budget:</label>
-                <p>@Model.HousingBudgetDisplay</p>
-            </li>
-            <li class="col-sm-2">
-                <label>Housing:</label>
-                <p>@Model.HousingTypeDisplay</p>
-            </li>
-            <li class="col-sm-2">
-                <label>School District:</label>
-                <p>@Model.SchoolDistrictDisplay </p>
-            </li>
+        <div class="details-block">
+            <div class="row details-header">
+                <P>
+                    Housing Details:
+                </P>
+            </div>
+            <div class="row details-row">
+                <div class="col-sm-3 details-col">
+                    <label>Monthly Budget:</label>
+                    <span>@string.Format("{0: $#,###.00}", @Model.HomeFinding.HousingBudget)</span>
+                </div>
+                <div class="col-sm-3 details-col">
+                    <label>Housing:</label>
+                    <span>@(Model.HomeFinding.HousingType != null ? Model.HomeFinding.HousingType.ToString() : "TBD")</span>
+                </div>
+                <div class="col-sm-3 details-col">
+                    <label>School District:</label>
+                    <span>@(Model.SchoolDistrict != null ? Model.SchoolDistrict : "TBD") </span>
+                </div>
 
-            <li class="col-sm-2">
-                <label>BD/BA:</label>
-                <p>@Model.NumberOfBedroomsDisplay/@Model.NumberOfBathroomsDisplay</p>
-            </li>
-            <li class="col-sm-2">
-                <label>Sq.Ft:</label>
-                <p>@Model.SquareFootageDisplay</p>
-            </li>
-            <li class="col-sm-2">
-                <label>Rent or Own:</label>
-                <p>@Model.HomeFinding.OwnershipType</p>
-            </li>
-        </ul>
+                <div class="col-sm-3 details-col">
+                    <label>BD/BA:</label>
+                    <span>@Model.HomeFinding.NumberOfBedrooms.ToString()/@(Model.HomeFinding.NumberOfBathrooms != null ? Model.HomeFinding.NumberOfBathrooms.ToString() : "TBD")</span>
+                </div>
+                <div class="col-sm-3 details-col">
+                    <label>Sq.Ft:</label>
+                    <span>@string.Format("{0: #,###.00}", @Model.HomeFinding.SquareFootage)</span>
+                </div>
+                <div class="col-sm-3 details-col">
+                    <label>Rent or Own:</label>
+                    <span>@Model.HomeFinding.OwnershipType</span>
+                </div>
+            </div>
+        </div>
     }
-    <h2 class="sectionSubHead">Housing Details</h2>
-    <ul class="row sectionList">
-        <li class="col-sm-2">
-            <label>Manager:</label>
-            <p>@Model.ProgramManager.FullName</p>
-        </li>
-        <li class="col-sm-2">
-            <label>Manager Email:</label>
-            <p>@Model.ProgramManager.Email</p>
-        </li>
-        <li class="col-sm-2">
-            <label>Manager #:</label>
-            <p> @Model.PhoneNumberDisplay</p>
-        </li>
 
-        <li class="col-sm-2">
-            <label>SE Number:</label>
-            <p>@Model.SeContactUidDisplay</p>
-        </li>
-        <li class="col-sm-2">
-            <label>Client Number:</label>
-            <p>@Model.ClientFileNumberDisplay</p>
-        </li>
-        <!-- this is a hack, remove this column-->
-        <li class="col-sm-2">
-            <label></label>
-            <p>&nbsp;</p>
-        </li>
-    </ul>
-    <hr>
+    <hr />
+    <div class="details-blocks" data-block="services">
+        <div class="row details-title">
+            <p>
+                Scheduled Services
+                <span class="details-save">
+                    - Save
+                </span>
+            </p>
+            <span class="details-blue">Please fill out any items that are not already auto-generated that could aid in the help of your clients placement.</span>
+        </div>
 
-    <div data-block="services">
-        <h1 class="sectionTitle">
-            Scheduled Services
-            <span class="sectionSave">
-                - Save
-            </span>
-        </h1>
-        <p class="sectionInstruction">Please fill out any items that are not already auto-generated that could aid in the help of your clients placement.</p>
+        <hr />
+        <div class="details-block" id="scheduledServices">
+            <div class="row details-row">
+                <div class="col-sm-3 details-col">
+                    <H5>Service:</H5>
+                </div>
+                <div class="col-sm-3 details-col">
+                    <H5>Scheduled Date:</H5>
+                </div>
+                <div class="col-sm-3 details-col">
+                    <H5>Time:</H5>
+                </div>
+                <div class="col-sm-3 details-col">
+                    <H5>Completed Date:</H5>
+                </div>
 
-        <ul class="row sectionList">
-            <li class="col-xs-12 col-sm-2">
-                <h2 class="sectionSubHead">Service:</h2>
-            </li>
-            <li class="col-xs-12 col-sm-2">
-                <h2 class="sectionSubHead">Scheduled Date:</h2>
-            </li>
-            <li class="col-xs-12 col-sm-2">
-                <h2 class="sectionSubHead">Time:</h2>
-            </li>
-            <li class="col-xs-12 col-sm-2">
-                <h2 class="sectionSubHead">Completed Date:</h2>
-            </li>
-            <li class="col-xs-12 col-sm-4">
-                <h2 class="sectionSubHead">Notes:</h2>
-            </li>
-        </ul>
-        @for (int i = 0; i < Model.Services.Count(); i++)
-        {
-            if (Model.Services.ElementAt(i).Selected)
+                <div class="col-sm-3 details-col">
+                    <H5>Notes:</H5>
+                </div>
+            </div>
+
+            @for (int i = 0; i < Model.Services.Count(); i++)
             {
-                <ul class="row sectionList" data-entity-id="@Model.Services.ElementAt(i).Id" data-entity-collection="services">
-                    <li class="col-xs-12 col-sm-2 scheduledServiceTitle">
-                        @Model.Services.ElementAt(i).Name
-                    </li>
-                    <li class="col-xs-12 col-sm-2">
-                        @Html.DatePicker("date", "ScheduledDate", Model.Services.ElementAt(i).ScheduledDateDisplay)
-                    </li>
-                    <li class="col-xs-12 col-sm-2">
-                        @Html.DatePicker("time", "ScheduledTime", Model.Services.ElementAt(i).ScheduledTimeDisplay)
-                        <div class="text-danger" style="display:none;" data-entity-id="@Model.Services.ElementAt(i).Id" data-valmsg-replace="true"><div for="ScheduledTime">Schedule time is required.</div></div>
-                    </li>
-                    <li class="col-xs-12 col-sm-2">
-                        @Html.DatePicker("date", "CompletedDate", Model.Services.ElementAt(i).CompletedDateDisplay)
-                    </li>
-                    <li class="col-xs-12 col-sm-4">
-                        <p>@Model.Services.ElementAt(i).Notes</p>
-                    </li>
-                </ul>
+                if (Model.Services.ElementAt(i).Selected)
+                {
+                    <div class="row details-row" data-entity-id="@Model.Services.ElementAt(i).Id" data-entity-collection="services">
+                        <div class="col-sm-3 details-col">
+                            <label>@Model.Services.ElementAt(i).Name.</label>
+                        </div>
+                        <div class="col-sm-3 details-col">
+                            @Html.DatePicker("date", "ScheduledDate", Model.Services.ElementAt(i).ScheduledDateDisplay)
+                        </div>
+                        <div class="col-sm-3 details-col">
+                            @Html.DatePicker("time", "ScheduledTime", Model.Services.ElementAt(i).ScheduledTimeDisplay)
+                            <div class="text-danger" style="display:none;" data-entity-id="@Model.Services.ElementAt(i).Id" data-valmsg-replace="true"><div for="ScheduledTime">Schedule time is required.</div></div>
+                        </div>
+                        <div class="col-sm-3 details-col">
+                            @Html.DatePicker("date", "CompletedDate", Model.Services.ElementAt(i).CompletedDateDisplay)
+                        </div>
+                        <div class="col-sm-3 details-col">
+                            <p>@Html.TextAreaFor(s => @Model.Services.ElementAt(i).Notes, new { @class = "form-control intake-service-input" })</p>
+                        </div>
+                    </div>
+                }
             }
-        }
+
+        </div>
+
     </div>
 </div>
-
 @Styles.Render("~/Styling/details")
-
 
 <script>
     $(document).ready(function () {
