--- a/Odin/Content/css/primaryNav.css
+++ b/Odin/Content/css/primaryNav.css
@@ -1,4 +1,9 @@
-﻿#primaryNav {
+﻿#orderContainer {
+  margin-left: 18rem;
+  margin-top: 8rem;
+  width: auto; }
+
+#primaryNav {
   position: fixed;
   z-index: 2;
   height: 5rem;
